--- a/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
+++ b/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
@@ -37,6 +37,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Schemas\Microsoft.Telephony.BatchDTMF.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.BatchDTMF.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.schema" />
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.PauseRecording.schema" />
