--- a/packages/Teams/js/package.json
+++ b/packages/Teams/js/package.json
@@ -29,13 +29,14 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "peerDependencies": {
-    "adaptive-expressions": "^4.14.0-rc2",
-    "botbuilder": "^4.14.0-rc2",
-    "botbuilder-dialogs": "^4.14.0-rc2",
-    "botbuilder-dialogs-adaptive": "^4.14.0-preview.rc2",
-    "botbuilder-dialogs-adaptive-runtime-core": "^4.14.0-preview.rc2",
-    "botbuilder-dialogs-declarative": "^4.14.0-preview.rc2",
-    "botbuilder-stdlib": "^4.14.0-internal.rc2",
+    "adaptive-expressions": "~4.14.0-rc2",
+    "botbuilder": "~4.14.0-rc2",
+    "botbuilder-dialogs": "~4.14.0-rc2",
+    "botbuilder-dialogs-adaptive": "~4.14.0-preview.rc2",
+    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview.rc2",
+    "botbuilder-dialogs-declarative": "~4.14.0-preview.rc2",
+    "botbuilder-stdlib": "~4.14.0-internal.rc2",
+    "botframework-connector": "~4.14.0-rc2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "botbuilder-dialogs-adaptive-runtime-core": "4.14.0-preview.rc2",
     "botbuilder-dialogs-declarative": "4.14.0-preview.rc2",
     "botbuilder-stdlib": "4.14.0-internal.rc2",
+    "botframework-connector": "4.14.0-rc2",
     "eslint": "latest",
     "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
