--- a/packages/Teams/js/package.json
+++ b/packages/Teams/js/package.json
@@ -29,13 +29,13 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "peerDependencies": {
-    "adaptive-expressions": "~4.14.0-rc0",
-    "botbuilder": "~4.14.0-rc0",
-    "botbuilder-dialogs": "~4.14.0-rc0",
-    "botbuilder-dialogs-adaptive": "~4.14.0-preview.rc0",
-    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview.rc0",
-    "botbuilder-dialogs-declarative": "~4.14.0-preview.rc0",
-    "botbuilder-stdlib": "~4.14.0-internal.rc0",
+    "adaptive-expressions": "~4.14.0",
+    "botbuilder": "~4.14.0",
+    "botbuilder-dialogs": "~4.14.0",
+    "botbuilder-dialogs-adaptive": "~4.14.0-preview",
+    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview",
+    "botbuilder-dialogs-declarative": "~4.14.0-preview",
+    "botbuilder-stdlib": "~4.14.0-internal",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -43,13 +43,13 @@
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
-    "adaptive-expressions": "4.14.0-rc0",
-    "botbuilder": "4.14.0-rc0",
-    "botbuilder-dialogs": "4.14.0-rc0",
-    "botbuilder-dialogs-adaptive": "~4.14.0-preview.rc0",
-    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview.rc0",
-    "botbuilder-dialogs-declarative": "~4.14.0-preview.rc0",
-    "botbuilder-stdlib": "~4.14.0-internal.rc0",
+    "adaptive-expressions": "4.14.0",
+    "botbuilder": "4.14.0",
+    "botbuilder-dialogs": "4.14.0",
+    "botbuilder-dialogs-adaptive": "~4.14.0-preview",
+    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview",
+    "botbuilder-dialogs-declarative": "~4.14.0-preview",
+    "botbuilder-stdlib": "~4.14.0-internal",
     "eslint": "latest",
     "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
