--- a/packages/Teams/js/package.json
+++ b/packages/Teams/js/package.json
@@ -29,30 +29,30 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "peerDependencies": {
-    "adaptive-expressions": "~4.14.0-rc2",
-    "botbuilder": "~4.14.0-rc2",
-    "botbuilder-dialogs": "~4.14.0-rc2",
-    "botbuilder-dialogs-adaptive": "~4.14.0-preview.rc2",
-    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview.rc2",
-    "botbuilder-dialogs-declarative": "~4.14.0-preview.rc2",
-    "botbuilder-stdlib": "~4.14.0-internal.rc2",
-    "botframework-connector": "~4.14.0-rc2",
+    "adaptive-expressions": "~4.14.0",
+    "botbuilder": "~4.14.0",
+    "botbuilder-dialogs": "~4.14.0",
+    "botbuilder-dialogs-adaptive": "~4.14.0-preview",
+    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview",
+    "botbuilder-dialogs-declarative": "~4.14.0-preview",
+    "botbuilder-stdlib": "~4.14.0-internal",
+    "botframework-connector": "~4.14.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash": "^4.14.168",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "adaptive-expressions": "4.14.0-rc2",
-    "botbuilder": "4.14.0-rc2",
-    "botbuilder-dialogs": "4.14.0-rc2",
-    "botbuilder-dialogs-adaptive": "4.14.0-preview.rc2",
-    "botbuilder-dialogs-adaptive-runtime-core": "4.14.0-preview.rc2",
-    "botbuilder-dialogs-declarative": "4.14.0-preview.rc2",
-    "botbuilder-stdlib": "4.14.0-internal.rc2",
-    "botframework-connector": "4.14.0-rc2",
-    "eslint": "latest",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "adaptive-expressions": "4.14.0",
+    "botbuilder": "4.14.0",
+    "botbuilder-dialogs": "4.14.0",
+    "botbuilder-dialogs-adaptive": "4.14.0-preview",
+    "botbuilder-dialogs-adaptive-runtime-core": "4.14.0-preview",
+    "botbuilder-dialogs-declarative": "4.14.0-preview",
+    "botbuilder-stdlib": "4.14.0-internal",
+    "botframework-connector": "4.14.0",
+    "eslint": "^7.30.0",
     "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.5"
