--- a/packages/HelpAndCancel/package.json
+++ b/packages/HelpAndCancel/package.json
@@ -21,6 +21,6 @@
     "url": "https://github.com/Microsoft/botframework-components.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified for package \\\"@microsoft/bot-components-helpandcancel\\\", skipping.\""
   }
 }
