--- a/packages/Teams/js/package.json
+++ b/packages/Teams/js/package.json
@@ -36,21 +36,24 @@
     "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview",
     "botbuilder-dialogs-declarative": "~4.14.0-preview",
     "botbuilder-stdlib": "~4.14.0-internal",
+    "botframework-connector": "~4.14.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash": "^4.14.168",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "adaptive-expressions": "4.14.0",
     "botbuilder": "4.14.0",
     "botbuilder-dialogs": "4.14.0",
-    "botbuilder-dialogs-adaptive": "~4.14.0-preview",
-    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.0-preview",
-    "botbuilder-dialogs-declarative": "~4.14.0-preview",
-    "botbuilder-stdlib": "~4.14.0-internal",
-    "eslint": "latest",
+    "botbuilder-dialogs-adaptive": "4.14.0-preview",
+    "botbuilder-dialogs-adaptive-runtime-core": "4.14.0-preview",
+    "botbuilder-dialogs-declarative": "4.14.0-preview",
+    "botbuilder-stdlib": "4.14.0-internal",
+    "botframework-connector": "4.14.0",
+    "eslint": "^7.30.0",
+    "eslint-plugin-prettier": "latest",
     "lodash": "^4.17.21",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.5"
