Move test folder structure to match main

--- a/tests/unit/packages/Microsoft.Bot.Components.Telephony.Tests/Microsoft.Bot.Components.Telephony.Tests.csproj
+++ b/tests/unit/packages/Microsoft.Bot.Components.Telephony.Tests/Microsoft.Bot.Components.Telephony.Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\packages\Telephony\Microsoft.Bot.Components.Telephony.csproj" />
+    <ProjectReference Include="..\..\..\..\packages\Telephony\Microsoft.Bot.Components.Telephony.csproj" />
   </ItemGroup>
 
   <ItemGroup>
