--- a/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
+++ b/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
@@ -37,18 +37,27 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Schemas\Microsoft.Telephony.FixedLengthBatchInput.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.FixedLengthBatchInput.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.schema" />
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.PauseRecording.schema" />
     <None Remove="Schemas\Microsoft.Telephony.PauseRecording.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.ResumeRecording.schema" />
     <None Remove="Schemas\Microsoft.Telephony.ResumeRecording.uischema" />
+    <None Remove="Schemas\Microsoft.Telephony.TerminationCharacterBatchInput.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.TerminationCharacterBatchInput.uischema" />
   </ItemGroup>
 
   <PropertyGroup>
     <!-- Disable warning for SA0001 "XML comment analysis is disabled due to project configuration" which is not true -->
     <!-- Disable warning for SA1649 "file name should match first type name" due to use of generics -->
-    <NoWarn>$(NoWarn),SA0001,SA1649</NoWarn>    
+    <NoWarn>$(NoWarn),SA0001,SA1649</NoWarn>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageIcon></PackageIcon>
+    <PackageIconUrl />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.9</Version>    
   </PropertyGroup>
 
 </Project>
