--- a/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
+++ b/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
@@ -48,4 +48,10 @@
     <None Remove="Schemas\Microsoft.Telephony.TerminationCharacterBatchInput.schema" />
     <None Remove="Schemas\Microsoft.Telephony.TerminationCharacterBatchInput.uischema" />
   </ItemGroup>
+
+  <PropertyGroup>
+    <!-- Disable warning for SA0001 "XML comment analysis is disabled due to project configuration" which is not true -->
+    <!-- Disable warning for SA1649 "file name should match first type name" due to use of generics -->
+    <NoWarn>$(NoWarn),SA0001,SA1649</NoWarn>
+  </PropertyGroup>
 </Project>
