Removed ability to handle non-dtmf input

--- a/tests/packages/Microsoft.Bot.Components.Telephony.Tests/Microsoft.Bot.Components.Telephony.Tests.csproj
+++ b/tests/packages/Microsoft.Bot.Components.Telephony.Tests/Microsoft.Bot.Components.Telephony.Tests.csproj
@@ -33,7 +33,13 @@
     <None Update="Integration\BatchInputTests\BatchInput_FixedLengthBaseScenario.test.dialog">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Integration\BatchInputTests\BatchInput_FixedLengthIgnoresNonDTMF.test.dialog">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Integration\BatchInputTests\BatchInput_FixedLengthHappyPath.test.dialog">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Integration\BatchInputTests\BatchInput_TerminationIgnoresNonDTMF.test.dialog">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Integration\BatchInputTests\BatchInput_TerminationHappyPath.test.dialog">
