chore: Merge Feature/telephony to main (#1227)
* Adding Telephony preview package, this includes Call Transfer Activit… (#942)

* Adding Telephony preview package, this includes Call Transfer Activity currently and it will be a place for all telephony extentions for composer

* addressing comments/error handling/stylecop issues

* Revert "addressing comments/error handling/stylecop issues"

This reverts commit 410c06fa740fca04d8ae2781002391a19c6701b2.

* updates based on comments/stylecop and throwing errors

* moving to Telephony folder

* updating solution too

Co-authored-by: Vanshika Sinha <vasinha@microsoft.com>

* Telephony: First draft of CommandDialog (#983)

* Telephony: create build pipeline (#984)

* Update telephony.yml for Azure Pipelines

* Telephony: Add recording actions to component

* Add Schema files and some comments

* Fix OnSuccess flow for commands

* Update telephony version to 0.0.1

* Update Microsoft.Bot.Components.Telephony.csproj

* Add support for pause and resume

* Add support for pause and resume

* Update Microsoft.Bot.Components.Telephony.csproj

* Update nuget-versioning-steps.yml

* Telephony: adopt stylecop / fxcop and leave things at zero warnings / errors

* chore: [Internal dev branch PR] Telephony: integration tests and CommandDialog interruption model first pass (#1066)

* Telephony: integration tests and CommandDialog interruption model first pass

* Telephony: adjust usings position and remove unnecesary ones

* Telephony: Base call transfer tests

* Telephony uischemas: Change action tree location for telephony components

* Add tests for pause and resume recording (#1165)

Co-authored-by: Pooja Nagpal <ponagpal@microsoft.com>

* Update recording labels per UX feedback (#1166)

Co-authored-by: Pooja Nagpal <ponagpal@microsoft.com>

* Update subtitle for recording operations (#1176)

Co-authored-by: Pooja Nagpal <ponagpal@microsoft.com>

* chore:Add mini-sp

--- a/.gitignore
+++ b/.gitignore
@@ -383,6 +383,7 @@ experimental/generator-dotnet-yeoman/node_modules
 
 # Allow the root-level /packages/ directory or it gets confused with NuGet directories
 !/[Pp]ackages/*
+!/tests/[Pp]ackages/*
 
 # Allow the packages directory under tests
 !/tests/unit/[Pp]ackages/*
