--- a/packages/Directory.Build.props
+++ b/packages/Directory.Build.props
@@ -18,7 +18,6 @@
     <RepositoryType />
     <NeutralLanguage>en-US</NeutralLanguage>
     <RepositoryUrl>https://github.com/Microsoft/botframework-components</RepositoryUrl>
-    <NoWarn>$(NoWarn);NU5048</NoWarn>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -26,7 +25,7 @@
 
   <PropertyGroup>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <NoWarn>NU1701</NoWarn>
+    <NoWarn>$(NoWarn),NU1701,NU5048</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
