--- a/skills/declarative/Calendar/Calendar/settings/appsettings.json
+++ b/skills/declarative/Calendar/Calendar/settings/appsettings.json
@@ -27,7 +27,7 @@
   },
   "luis": {
     "authoringEndpoint": "",
-    "authoringRegion": "",
+    "authoringRegion": "westus",
     "defaultLanguage": "en-us",
     "endpoint": "",
     "environment": "composer",
@@ -77,5 +77,6 @@
   "oauthConnectionName": "",
   "defaultValue": {
     "duration": 30
-  }
+  },
+  "skillConfiguration": {}
 }
