--- a/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
+++ b/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
@@ -37,16 +37,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Schemas\Microsoft.Telephony.FixedLengthBatchInput.schema" />
-    <None Remove="Schemas\Microsoft.Telephony.FixedLengthBatchInput.uischema" />
+    <None Remove="Schemas\Microsoft.Telephony.BatchFixedLengthInput.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.BatchFixedLengthInput.uischema" />
+    <None Remove="Schemas\Microsoft.Telephony.BatchTerminationCharacterInput.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.BatchTerminationCharacterInput.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.schema" />
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.PauseRecording.schema" />
     <None Remove="Schemas\Microsoft.Telephony.PauseRecording.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.ResumeRecording.schema" />
     <None Remove="Schemas\Microsoft.Telephony.ResumeRecording.uischema" />
-    <None Remove="Schemas\Microsoft.Telephony.TerminationCharacterBatchInput.schema" />
-    <None Remove="Schemas\Microsoft.Telephony.TerminationCharacterBatchInput.uischema" />
   </ItemGroup>
 
   <PropertyGroup>
