--- a/tests/unit/packages/Microsoft.Bot.Components.Telephony.Tests/Microsoft.Bot.Components.Telephony.Tests.csproj
+++ b/tests/unit/packages/Microsoft.Bot.Components.Telephony.Tests/Microsoft.Bot.Components.Telephony.Tests.csproj
@@ -36,6 +36,12 @@
     <None Update="Integration\BatchInputTests\BatchInput_FixedLengthHappyPath.test.dialog">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Integration\BatchInputTests\BatchInput_FixedLength_WithTangent_InterruptionEnabled_EventInterrupt.test.dialog">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Integration\BatchInputTests\BatchInput_Termination_WithTangent_InterruptionEnabled_EventInterrupt.test.dialog">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Integration\BatchInputTests\BatchInput_Termination_WithTangent_InterruptionEnabled_WithReprompt.test.dialog">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
