--- a/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
+++ b/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
@@ -39,6 +39,8 @@
   <ItemGroup>
     <None Remove="Schemas\Microsoft.Telephony.BatchFixedLengthInput.schema" />
     <None Remove="Schemas\Microsoft.Telephony.BatchFixedLengthInput.uischema" />
+    <None Remove="Schemas\Microsoft.Telephony.BatchRegexInput.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.BatchRegexInput.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.BatchTerminationCharacterInput.schema" />
     <None Remove="Schemas\Microsoft.Telephony.BatchTerminationCharacterInput.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.schema" />
