--- a/packages/Teams/js/package.json
+++ b/packages/Teams/js/package.json
@@ -2,7 +2,7 @@
   "name": "@microsoft/bot-components-teams",
   "author": "Microsoft Corp.",
   "description": "Rule system for the Microsoft BotBuilder adaptive dialog system, with integration specific to Microsoft Teams.",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "license": "MIT",
   "keywords": [
     "msbot-component",
@@ -29,14 +29,14 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "peerDependencies": {
-    "adaptive-expressions": "~4.14.1",
-    "botbuilder": "~4.14.1",
-    "botbuilder-dialogs": "~4.14.1",
-    "botbuilder-dialogs-adaptive": "~4.14.1-preview",
-    "botbuilder-dialogs-adaptive-runtime-core": "~4.14.1-preview",
-    "botbuilder-dialogs-declarative": "~4.14.1-preview",
-    "botbuilder-stdlib": "~4.14.1-internal",
-    "botframework-connector": "~4.14.1",
+    "adaptive-expressions": "~4.15.0-rc0",
+    "botbuilder": "~4.15.0-rc0",
+    "botbuilder-dialogs": "~4.15.0-rc0",
+    "botbuilder-dialogs-adaptive": "~4.15.0-rc0.preview",
+    "botbuilder-dialogs-adaptive-runtime-core": "~4.15.0-rc0.preview",
+    "botbuilder-dialogs-declarative": "~4.15.0-rc0.preview",
+    "botbuilder-stdlib": "~4.15.0-rc0.internal",
+    "botframework-connector": "~4.15.0-rc0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -44,14 +44,14 @@
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
-    "adaptive-expressions": "4.14.1",
-    "botbuilder": "4.14.1",
-    "botbuilder-dialogs": "4.14.1",
-    "botbuilder-dialogs-adaptive": "4.14.1-preview",
-    "botbuilder-dialogs-adaptive-runtime-core": "4.14.1-preview",
-    "botbuilder-dialogs-declarative": "4.14.1-preview",
-    "botbuilder-stdlib": "4.14.1-internal",
-    "botframework-connector": "4.14.1",
+    "adaptive-expressions": "4.15.0-rc0",
+    "botbuilder": "4.15.0-rc0",
+    "botbuilder-dialogs": "4.15.0-rc0",
+    "botbuilder-dialogs-adaptive": "4.15.0-rc0.preview",
+    "botbuilder-dialogs-adaptive-runtime-core": "4.15.0-rc0.preview",
+    "botbuilder-dialogs-declarative": "4.15.0-rc0.preview",
+    "botbuilder-stdlib": "4.15.0-rc0.internal",
+    "botframework-connector": "4.15.0-rc0",
     "eslint": "^7.30.0",
     "eslint-plugin-prettier": "latest",
     "lodash": "^4.17.21",
