--- a/tests/unit/skills/calendar/NuGet.Config
+++ b/tests/unit/skills/calendar/NuGet.Config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <clear/>
-    <add key="SDK" value="https://pkgs.dev.azure.com/ConversationalAI/BotFramework/_packaging/SDK/nuget/v3/index.json" protocolVersion="3" />
+    <add key="SDK" value="https://pkgs.dev.azure.com/ConversationalAI/BotFramework/_packaging/SDK/nuget/v3/index.json" />
   </packageSources>
 </configuration>
