chore: Bump SDK version to 4.15.0-RC0 and increment Components versions (#1263)
* Bump platform versions

* Bump index.js package references

* Bump package references in csproj files

* bump nuspec package references

* Bump package.json version references

* Bump csproj version prefix

* Bump nuspec version

* Bump index.js component package refs

* bump test.js package versions

* fix refs to js preview sdks

* update yarn.lock

* Update nuget.config myget reference to use azure artifacts feed

* fix sdk references in js web app test

* clean up nuget.config

* Add nuget.org to config for test

* remove nuget.org from test config

* fix js webapp test reference

* revert to myget

* switch to sdk azure artifacts feed

* Switch to myget configuration to test NugetSecurityAnalysisWarningLevel variable

* Add nuget.org and switch to azure artifacts

* Test NugetSecurityAnalysisWarningLevel set to none for the msgraph pipeline

* Revert "Test NugetSecurityAnalysisWarningLevel set to none for the msgraph pipeline"

This reverts commit f6dcf120f37fd5b88b41d6f6f8f679f8f7cbe240.

* Revert "Add nuget.org and switch to azure artifacts"

This reverts commit 57830a02e495928323797cb5c017408a380b04ee.

* revert clear tag formatting

* revert teams js stdlib reference to 4.14.1 internal

* fix package.json

* fix prettier comment

--- a/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
+++ b/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Microsoft.Bot.Components.Welcome</id>
-        <version>1.1.2</version>
+        <version>1.2.0</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <copyright>© Microsoft Corporation. All rights reserved.</copyright>
@@ -13,7 +13,7 @@
         <description>An Adaptive Dialog for greeting new and returning users on first interaction with your bot built on the Azure Bot Framework.</description>
         <tags>msbot-component msbot-content conversationalcore welcome preview</tags>
         <dependencies>
-            <dependency id="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" version="4.14.1" />
+            <dependency id="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" version="4.15.0-rc0" />
         </dependencies>
     </metadata>
 
