--- a/packages/Teams/dotnet/Microsoft.Bot.Components.Teams.csproj
+++ b/packages/Teams/dotnet/Microsoft.Bot.Components.Teams.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.15.0-rc2" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.15.0" />
   </ItemGroup>
 
 </Project>
