--- a/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
+++ b/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
@@ -7,7 +7,7 @@
 
   <PropertyGroup>
     <PackageId>Microsoft.Bot.Components.Telephony</PackageId>
-    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionPrefix>1.1.0</VersionPrefix>
     <Description>This library implements .NET support for adaptive dialogs with Telephony.</Description>
     <Summary>This library implements .NET support for adaptive dialogs with Telephony.</Summary>
     <PackageProjectUrl>https://github.com/Microsoft/botframework-components/tree/main/packages/Telephony</PackageProjectUrl>
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" Version="4.14.1" />
-
+    
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.333">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -39,6 +39,8 @@
   <ItemGroup>
     <None Remove="Schemas\Microsoft.Telephony.BatchFixedLengthInput.schema" />
     <None Remove="Schemas\Microsoft.Telephony.BatchFixedLengthInput.uischema" />
+    <None Remove="Schemas\Microsoft.Telephony.BatchRegexInput.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.BatchRegexInput.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.BatchTerminationCharacterInput.schema" />
     <None Remove="Schemas\Microsoft.Telephony.BatchTerminationCharacterInput.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.StartRecording.schema" />
@@ -47,6 +49,8 @@
     <None Remove="Schemas\Microsoft.Telephony.PauseRecording.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.ResumeRecording.schema" />
     <None Remove="Schemas\Microsoft.Telephony.ResumeRecording.uischema" />
+    <None Remove="Schemas\Microsoft.Telephony.TimeoutChoiceInput.schema" />
+    <None Remove="Schemas\Microsoft.Telephony.TimeoutChoiceInput.uischema" />
   </ItemGroup>
 
   <PropertyGroup>
