--- a/skills/declarative/People/People/People.csproj
+++ b/skills/declarative/People/People/People.csproj
@@ -12,9 +12,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.15.2" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.15.2" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" Version="4.15.2" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.16.0-rc0" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.16.0-rc0" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" Version="4.16.0-rc0" />
     <PackageReference Include="Microsoft.Bot.Components.Graph" Version="1.1.2" />
   </ItemGroup>
 </Project>
