Changes based on PR comments

--- a/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
+++ b/packages/Telephony/Microsoft.Bot.Components.Telephony.csproj
@@ -52,14 +52,16 @@
     <None Remove="Schemas\Microsoft.Telephony.ResumeRecording.uischema" />
     <None Remove="Schemas\Microsoft.Telephony.TimeoutChoiceInput.schema" />
     <None Remove="Schemas\Microsoft.Telephony.TimeoutChoiceInput.uischema" />
-	  <None Remove="Schemas\Microsoft.Telephony.TimeoutTextInput.schema" />
-	  <None Remove="Schemas\Microsoft.Telephony.TimeoutTextInput.uischema" />
+	<None Remove="Schemas\Microsoft.Telephony.TimeoutTextInput.schema" />
+	<None Remove="Schemas\Microsoft.Telephony.TimeoutTextInput.uischema" />
   </ItemGroup>
 
   <PropertyGroup>
     <!-- Disable warning for SA0001 "XML comment analysis is disabled due to project configuration" which is not true -->
     <!-- Disable warning for SA1649 "file name should match first type name" due to use of generics -->
     <NoWarn>$(NoWarn),SA0001,SA1649</NoWarn>
+    <RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
+    <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
   </PropertyGroup>
 
 </Project>
