CQA Correctected key path

--- a/packages/Recognizers/CustomQuestionAnswering/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
+++ b/packages/Recognizers/CustomQuestionAnswering/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
@@ -10,7 +10,7 @@
 		<Summary>This library implements .NET support for Composer with Custom Question Answering.</Summary>
 		<PackageProjectUrl>https://github.com/botframework-components/tree/main/packages/Recognizers/CustomQuestionAnswering</PackageProjectUrl>
 		<SignAssembly>true</SignAssembly>
-		<AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
+		<AssemblyOriginatorKeyFile>..\..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
 		<DelaySign>true</DelaySign>
 		<Copyright>Microsoft 2022</Copyright>
 		<IncludeSymbols>True</IncludeSymbols>
