Restructured CQA package to allow for JS impl

--- a/packages/Recognizers/CustomQuestionAnswering/dotnet/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
+++ b/packages/Recognizers/CustomQuestionAnswering/dotnet/Microsoft.Bot.Components.Recognizers.CustomQuestionAnsweringRecognizer.csproj
@@ -16,7 +16,7 @@
 		<Summary>This library implements .NET support for Composer with Custom Question Answering.</Summary>
 		<PackageProjectUrl>https://github.com/Microsoft/botframework-components/tree/main/packages/Recognizers/CustomQuestionAnswering</PackageProjectUrl>
 		<SignAssembly>true</SignAssembly>
-		<AssemblyOriginatorKeyFile>..\..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
+		<AssemblyOriginatorKeyFile>..\..\..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
 		<DelaySign>true</DelaySign>
 	</PropertyGroup>
 
