--- a/packages/Graph/Microsoft.Bot.Components.Graph.csproj
+++ b/packages/Graph/Microsoft.Bot.Components.Graph.csproj
@@ -37,6 +37,6 @@
   <PropertyGroup>
     <!-- Disable warning for SA0001 "XML comment analysis is disabled due to project configuration" which is not true -->
     <!-- Disable warning for SA1649 "file name should match first type name" due to use of generics -->
-    <NoWarn>$(NoWarn),SA0001,SA1649</NoWarn>
+    <NoWarn>$(NoWarn),SA0001,SA1649;CA1507</NoWarn>
   </PropertyGroup>
 </Project>
